<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adopt"
    android:background="#95C3D5">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="121dp"
        android:text="Adopt a friend"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/ghiocel" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn1Click"
                    android:text="@string/ghiocel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="584dp"
                    android:layout_weight="1"
                    android:src="@drawable/leo" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn2Click"
                    android:text="@string/leo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/linda" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn3Click"
                    android:text="@string/linda" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="243dp"
                    android:layout_weight="1"
                    android:src="@drawable/liz" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn4Click"
                    android:text="@string/liz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="317dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="293dp"
                    android:layout_weight="1"
                    android:src="@drawable/lucky" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn5Click"
                    android:text="@string/lucky" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="321dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/maya" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn6Click"
                    android:text="@string/maya" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/miky" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn7Click"
                    android:text="@string/miky" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/nero" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn8Click"
                    android:text="@string/nero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/nero1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn9Click"
                    android:text="@string/Nero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/sascha" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn10Click"
                    android:text="@string/sascha" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/scooby" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn11Click"
                    android:text="@string/scooby" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/toby" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn12Click"
                    android:text="@string/toby" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/tundra" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn13Click"
                    android:text="@string/tundra" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/ursu" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn14Click"
                    android:text="@string/ursu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="439dp"
                    android:layout_weight="1"
                    android:src="@drawable/yogi" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onBtn15Click"
                    android:text="@string/yogi" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>