<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Physically"
    android:background="#95C3D5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="111dp"
        android:text="Physical adoption"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_fullname"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/FullName"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/tv_address"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Address"
        android:inputType="textMultiLine"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:text="@string/Otherdogs"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <EditText
        android:id="@+id/tv_email"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Emailaddress"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fullname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tv_phone"
        android:layout_width="374dp"
        android:layout_height="51dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="251dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="338dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="248dp"
        android:text="view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>